openshift/07-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: varad-1021-dev
  labels:
    app: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: varad1021/fincore-backend:1.1
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          readinessProbe:
           httpGet:
            path: /api/health
            port: 5000
           initialDelaySeconds: 20
           periodSeconds: 10
           timeoutSeconds: 3
           failureThreshold: 5

          livenessProbe:
           httpGet:
            path: /api/health
            port: 5000
           initialDelaySeconds: 40
           periodSeconds: 15
           timeoutSeconds: 3
           failureThreshold: 5

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
