openshift/04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: varad-1021-dev
  labels:
    app: postgres

spec:
  selector:
    app: postgres

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP

  type: ClusterIP
